--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,33 @@
             <artifactId>dropwizard-guice</artifactId>
             <version>0.7.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.4</version>
+        </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>dbcp</id>
+            <url>https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp</url>
+        </repository>
+    </repositories>
 </project>
